feat(api): add option to unblock job
